; ModuleID = '/home/carl/AnghaBench/TDengine/src/rpc/src/extr_trpc.c_taosSendSimpleRsp.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/rpc/src/extr_trpc.c_taosSendSimpleRsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [47 x i8] c"connection is gone, response could not be sent\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosSendSimpleRsp(i8* %0, i8 signext %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8 %1, i8* %6, align 1
  store i8 %2, i8* %7, align 1
  %11 = load i8*, i8** %5, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 @tError(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %35

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = load i8, i8* %6, align 1
  %18 = call i8* @taosBuildRspMsgWithSize(i8* %16, i8 signext %17, i32 32)
  store i8* %18, i8** %9, align 8
  %19 = load i8*, i8** %9, align 8
  store i8* %19, i8** %8, align 8
  %20 = load i8, i8* %7, align 1
  %21 = load i8*, i8** %8, align 8
  store i8 %20, i8* %21, align 1
  %22 = load i8*, i8** %8, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %8, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = ptrtoint i8* %24 to i64
  %27 = ptrtoint i8* %25 to i64
  %28 = sub i64 %26, %27
  %29 = trunc i64 %28 to i32
  store i32 %29, i32* %10, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @taosSendMsgToPeer(i8* %30, i8* %31, i32 %32)
  %34 = load i32, i32* %10, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %15, %13
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @tError(i8*) #1

declare dso_local i8* @taosBuildRspMsgWithSize(i8*, i8 signext, i32) #1

declare dso_local i32 @taosSendMsgToPeer(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
